latest post part completed

--- a/_posts/2022-10-31-blog0.2.md
+++ b/_posts/2022-10-31-blog0.2.md
@@ -1,8 +1,9 @@
 ---
 layout: post
 author: abhya
+excerpt_separator: <!--more-->
 ---
-Kiwifruit (often abbreviated as kiwi), or Chinese gooseberry is the edible
+Kiwifruit (often abbreviated as kiwi), or Chinese gooseberry is the edible<!--more-->
 berry of several species of woody vines in the genus Actinidia.
 
 The most common cultivar group of kiwifruit is oval, about the size of a large
