--- a/_posts/2022-11-01-blog1.md
+++ b/_posts/2022-11-01-blog1.md
@@ -1,8 +1,9 @@
 ---
 layout: post
 author: abhya
+excerpt_separator: <!--more-->
 ---
-This is an example of layout inheritance. The post layout outputs the title, date, author and content body which is wrapped by the default layout.
+This is an example of layout inheritance. The post layout outputs the title, date, author and content body which is <!--more-->wrapped by the default layout.
 
 Also note the date_to_string filter, this formats a date into a nicer format.
 List postsPermalink
