--- a/_posts/2022-10-30-blog0.1.md
+++ b/_posts/2022-10-30-blog0.1.md
@@ -1,8 +1,9 @@
 ---
 layout: post
 author: abhya
+excerpt_separator: <!--more-->
 ---
-An apple is a sweet, edible fruit produced by an apple tree.
+An apple is a sweet, edible fruit produced by an apple tree.<!--more-->
 Apple trees are cultivated worldwide, and are the most widely grown species in
 the genus Malus. The tree originated in Central Asia, where its wild ancestor,
 Malus sieversii, is still found today. Apples have been grown for thousands of
